--- a/styles/web.css
+++ b/styles/web.css
@@ -206,6 +206,42 @@ header{
             }
             .sixth-page-title{
                 justify-content: center;
+                margin-left: 312px;
+                margin-right: 312px;
+
+
+            }
+            .sixth-page-description{
+                justify-items: center;
+                margin-left:326.5px ;
+                margin-right: 326.5px;
+
+            }
+            .sixth-page-button{
+               
+                margin-left:472px ;
+                margin-right: 472px;
+                width: 123px;
+                height: 24px;
+                padding: 20px;
+                border-radius: 24px;
+                background-color: #4E47FF;
+               font:bold;
+               color: #FFFFFF;
+               text-decoration: none;
+               background-color: #4E47FF;
+               font: 16px;
+               color: white;
+               
+
+            }
+            .sixth-page-picture{
+               border-radius:48px;
+                justify-items: center;
+                margin-left:150px ;
+                margin-right: 150px;
+                
+                
             }
 
 
